--- a/style.css
+++ b/style.css
@@ -41,3 +41,157 @@ nav .container .item a{
     text-decoration: none;
     color: #000;
 }
+
+
+/* Section one */
+
+
+.sec-1{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+
+.sec-1 .box1{
+    padding-left: 9%;
+}
+
+.sec-1 .box1 h1 span{
+    background: linear-gradient(to top, #fda48c 40%, transparent 40%);
+}
+
+.sec-1 .box1 h1{
+    font-size: 74px;
+   
+}
+
+.sec-1 .box1 .mar{
+    margin-bottom: -23px;
+}
+
+.sec-1 .box1 h5{
+    font-size: 24px;
+}
+
+.sec-1 .box1 p{
+    font-size: 19px;
+    margin-top: 5px;
+}
+
+.sec-1 .box1 button{
+    margin-top: 30px;
+    width: 180px;
+    padding: 15px 13px;
+    background-color: #ffff;
+    border: none;
+    border-radius: 5px;
+    outline: 1px solid black;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.sec-1 .box1 #btn1{
+    background-color: #000;
+    color: #ffff;
+   
+}
+.sec-1 .box1 #btn1:hover{
+    background-color: #2b2929;
+}
+
+.sec-1 .box1 #btn2{
+    margin-left: 15px;
+}
+
+.sec-1 .box1 #btn2:hover{
+    background-color: #F5F5F5;
+}
+
+.sec-1 .box2 {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    outline: 1px solid #E5E7EB;
+    border-radius: 20px;
+    width: 625px;
+    height: 460px;
+}
+
+.sec-1 .box2 .image{
+    overflow: hidden;
+}
+
+.sec-1 .box2 .image img{
+    width: 580px;
+    height: 320px;
+    transform: scaleY(1.2);
+}
+
+.sec-1 .box2 .dwIcon svg{
+    height: 25px;
+}
+
+.sec-1 .box2 .tpIcon{
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.sec-1 .box2 .tpIcon div svg{
+    fill: #000;
+}
+
+.sec-1 .box2 .tpIcon{
+    margin-right: auto;
+    margin-left: 20px;
+    
+}
+
+.sec-1 .box2 .tpIcon div{
+    cursor: pointer;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.sec-1 .box2 .tpIcon div p:hover{
+    color: #FF6841;
+}
+
+.sec-1 .box2 .tpIcon .one p{
+    color: #FF6841;
+}
+
+.sec-1 .box2 .tpIcon div svg:hover{
+    fill: #FF6840;
+}
+
+.sec-1 .box2 .dwIcon{
+    width: 90%;
+    padding-top: 10px;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    transition: transform 500ms ease;
+
+} 
+
+.sec-1 .box2 .dwIcon svg{
+    width: 30px;
+   cursor: pointer;
+}
+
+.sec-1 .box2 .dwIcon svg:hover{
+    transform: scale(1.5);
+
+}
+
+.sec-1 .box2 .dwIcon .right{
+    margin-right: auto;
+    fill: #40261e;
+}
