--- a/style.css
+++ b/style.css
@@ -398,13 +398,10 @@ nav .container .item  .dropToggle{
     margin-top: 15px;
 }
 
-.sec-2 .container .one{
+.sec-2 .container div{
     width: 50%;
 }
 
-.sec-2 .container .two{
-    width: 50%;
-}
 
 .sec-2 .container .one .codeDiv{
     background-color: #171717;
@@ -512,6 +509,86 @@ nav .container .item  .dropToggle{
     font-size: 18px;
 }
 
+    /* Section two Media Queries */
+@media(max-width:1470px){
+
+
+
+.sec-2 .container .one .codeDiv{
+    width: 400px;
+}
+
+.sec-2 .container .two h1{
+    font-size: 55px;
+}
+
+}
+
+@media(max-width:1275px){
+
+ .sec-2 .container{
+    width: 90%;
+ }   
+
+ .sec-2 .container .two h1{
+    font-size: 50px;
+}
+
+}
+
+@media(max-width:1080px){
+.sec-2 .container .one .codeDiv{
+    width: 300px;
+}
+
+.sec-2 .container{
+    gap: 10px;
+}
+}
+
+@media(max-width:860px){
+
+.sec-2 .container{
+    flex-direction: column;
+    padding: 10px;
+    
+}    
+
+.sec-2 .container .one{
+    order: 2;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.sec-2 .container .one .codeDiv{
+    width: 90%;
+    
+}
+
+.sec-2 .container .two{
+    width: 80%;
+    margin-left: 30px;
+}
+
+
+}
+
+@media(max-width:600px){
+
+
+
+.sec-2 .container .two h1{
+    font-size: 30px;
+    
+}
+
+.sec-2 .container .two p{
+    font-size: 15px;
+}
+
+
+}
 
 /* Section three */
 
