--- a/style.css
+++ b/style.css
@@ -715,7 +715,7 @@ nav .container .item  .dropToggle{
 
 .sec-3 .btbox{
     margin-top: 40px;
-    width: 820px;
+    max-width: 820px;
     height: 590px;
     border: 1px solid #d6d9dc;
     border-radius: 10px;
@@ -793,6 +793,42 @@ nav .container .item  .dropToggle{
     color: #fff; 
 }
 
+    /* Section three Media Query */
+
+@media(max-width:839px){
+
+
+.sec-3 .tpbox h1{
+    font-size: 35px;
+}    
+
+.sec-3 .mdbox{
+    flex-direction: column;
+}
+
+.sec-3 .mdbox div{
+    width: 350px;
+}
+
+.sec-3 .btbox{
+    width: 350px;
+}
+
+.sec-3 .btbox .btpart{
+    margin-top: -40px;
+}
+
+}
+
+@media(max-width:639px){
+
+.sec-3 .tpbox h1{
+    font-size: 25px;
+}   
+
+}
+
+
 /* Section four */
 
 .sec-4{
@@ -826,6 +862,33 @@ nav .container .item  .dropToggle{
 
 .sec-4 .content svg{
     margin-top: 50px;
+}
+
+
+    /* Section four Media Query */
+
+@media(max-width:1050px){
+
+.sec-4 .content h1{
+    font-size: 35px;
+}
+
+.sec-4 .content p{
+    font-size: 16px;
+}
+
+}
+
+@media(max-width:550px){
+
+.sec-4 .content h1{
+    font-size: 25px;
+}
+    
+.sec-4 .content p{
+    text-align: center;
+}    
+    
 }
 
 
@@ -903,6 +966,28 @@ nav .container .item  .dropToggle{
     color: #000;
 }
 
+    /* Section five Media Query */
+
+@media(max-width:1265px){
+.sec-5{
+    padding: 0px 15px;
+}
+
+}
+
+@media(max-width:480px){
+
+.sec-5 .box h1{
+    font-size: 60px;
+    text-align: center;
+}
+
+.sec-5 .box .btn{
+    flex-direction: column;
+}
+
+}
+
 
 /* Footer Section */
 
@@ -941,3 +1026,31 @@ footer .container div p{
     color: #9EA3AA;
     cursor: pointer;
 }
+
+    /* Footer Media query */
+
+@media(max-width:1155px){
+
+    footer .container{
+        gap: 10px;
+    }    
+    
+}
+
+@media(max-width:993px){
+
+footer .container{
+    flex-direction: column;
+    align-items: center;
+}
+
+footer .container div{
+    padding: 20px;
+}
+
+footer .container div *{
+    text-align: center;
+}
+
+}
+
